syntax = "proto3";

package example;
option go_package = "./example;example";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

service Calculator {
    rpc Add (AddRequest) returns (AddResponse) {}
    rpc Subtract (SubtractRequest) returns (SubtractResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 result = 1;
}

message SubtractRequest {
    int32 a = 1;
    int32 b = 2;
}

message SubtractResponse {
    int32 result = 1;
}

